--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+/* ============================================
+   IMPORT SHARED THEME STYLES
+   ============================================ */
+@import 'styles/shared-theme.scss';
+
 /* Global Styles */
 * {
   margin: 0;
